Changed from a header-only format to the more standard .h/.cpp format. Created an example file.

--- a/GPIO.cbp
+++ b/GPIO.cbp
@@ -32,8 +32,9 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="example.cpp" />
+		<Unit filename="gpio.cpp" />
 		<Unit filename="gpio.h" />
-		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
